<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".FragmentQuestion">

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_close" />

        <TextView
            android:id="@+id/txt_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/level_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="italic" />

    </FrameLayout>

    <ImageView
        android:id="@+id/img_question"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/img"
        app:layout_constraintBottom_toTopOf="@id/question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/framelayout" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/futbol_qancha_vaqt_davom_etadi"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_answer1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_question" />

    <Button
        android:id="@+id/btn_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:backgroundTint="@color/my_colorToqBlue"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/_50"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_answer2"
        app:layout_constraintTop_toBottomOf="@id/question" />

    <Button
        android:id="@+id/btn_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:backgroundTint="@color/my_colorToqBlue"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/_80"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_answer3"
        app:layout_constraintTop_toBottomOf="@id/btn_answer1" />

    <Button
        android:id="@+id/btn_answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:backgroundTint="@color/my_colorToqBlue"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/_90"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_right"
        app:layout_constraintTop_toBottomOf="@id/btn_answer2" />


    <ImageView
        android:id="@+id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_left"
        app:layout_constraintRight_toLeftOf="@id/btn_right"
        app:layout_constraintTop_toBottomOf="@id/btn_answer3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
        <ImageView
        android:id="@+id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_right"
        app:layout_constraintTop_toBottomOf="@id/btn_answer3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_left"
        />


</androidx.constraintlayout.widget.ConstraintLayout>